--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ts-jest": "^28.0.6",
     "ts-loader": "^9.3.1",
     "typescript": "^4.8.2",
+    "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
