--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/chrome": "^0.0.193",
     "@types/dedent": "^0.7.0",
     "@types/jest": "^28.1.6",
+    "@types/lodash": "^4.14.184",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
@@ -49,6 +50,7 @@
     "endent": "^2.1.0",
     "eslint": "^8.18.0",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "npm": "^8.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
